test/should_pass/basic_026.grg
actions basic_026;

rule r {
	pattern {
		x:Node -e:Edge-> y:Node;
	}
	modify {
		x -e-> y;
	}
}
